--- a/Frontend/recipe-book/src/Styles/HeaderComponent.css
+++ b/Frontend/recipe-book/src/Styles/HeaderComponent.css
@@ -10,6 +10,8 @@
 
 .nav-link:hover {
     color: gray;
+    background-color: rgba(0, 0, 0, 0.119);
+    border-radius: 5px;
 }
 
 .navbar-header>.navbar-brand {
