--- a/Frontend/recipe-book/src/Styles/RecipeItemComponent.css
+++ b/Frontend/recipe-book/src/Styles/RecipeItemComponent.css
@@ -1,5 +1,32 @@
-.list-group-item.active {
+.RecipeItemComponent .list-group-item.active {
     background-color: #5e72e4;
     border-color: #5e72e4;
     color: #FFFFFF;
+}
+
+.RecipeItemComponent .list-group-item {
+    background-color: #3F3F3F;
+    color: #FFFFFF;
+    cursor: pointer;
+    border: none;
+}
+
+.RecipeItemComponent .list-group-item:hover {
+    background-color: #4F4F4F;
+    color: #FFFFFF;
+}
+
+.RecipeItemComponent .list-group-item-heading {
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+}
+
+.RecipeItemComponent .list-group-item-text {
+    margin-bottom: 0.5rem;
+}
+
+.RecipeItemComponent .img-responsive {
+    max-height: 50px;
 }
