--- a/Frontend/recipe-book/src/Styles/RecipeListComponent.css
+++ b/Frontend/recipe-book/src/Styles/RecipeListComponent.css
@@ -1,29 +1,5 @@
-.btn-add {
-    background-color: #17a2b8; 
-    border-color: aliceblue; 
-    color: #FFFFFF;
-}
-
-
-.list-group-item {
-    background-color: #3F3F3F;
-    color: #FFFFFF;
-    cursor: pointer;
-    border: none;
-}
-.list-group-item:hover {
-    background-color: #4F4F4F;
-    color: #FFFFFF;
-}
-.list-group-item-heading {
-    font-size: 1.5rem;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-}
-.list-group-item-text {
-    margin-bottom: 0.5rem;
-}
-.img-responsive {
-    max-height: 50px;
+.RecipeListComponent .btn-add {
+    background-color: rgb(76, 74, 74);
+    border-color: aliceblue;
+    color: aliceblue;
 }
