--- a/Frontend/recipe-book/src/Styles/AuthComponent.css
+++ b/Frontend/recipe-book/src/Styles/AuthComponent.css
@@ -7,7 +7,7 @@
 
 .input-group .input-group-text,
 input[type="text"],
-input[type="password"] {
+input[type="password"],input[type="file"] {
     color: #fff;
     background-color: #444;
     border-color: #666;
