--- a/Frontend/recipe-book/src/Styles/RecipeAddComponent.css
+++ b/Frontend/recipe-book/src/Styles/RecipeAddComponent.css
@@ -1,12 +1,13 @@
 .RecipeAddComponent input[type='file']:focus {
-    background-color: #444; 
+    background-color: #444;
     color: white;
 }
 
 
 .RecipeAddComponent .input-group .input-group-text,
 input[type="text"],
-input[type="password"],input[type="file"] {
+input[type="password"],
+input[type="file"] {
     color: #fff;
     background-color: #444;
     border-color: #666;
@@ -17,8 +18,8 @@ input[type="password"],input[type="file"] {
     background-color: #444;
 }
 
-.RecipeAddComponent .form-floating input:focus  {
-    background-color: #444; 
+.RecipeAddComponent .form-floating input:focus {
+    background-color: #444;
     color: white;
 }
 
@@ -26,17 +27,18 @@ input[type="password"],input[type="file"] {
     color: white;
 }
 
-.RecipeAddComponent .form-floating > .form-control:not(:placeholder-shown) ~ label::after {
+.RecipeAddComponent .form-floating>.form-control:not(:placeholder-shown)~label::after {
     background-color: transparent;
 }
-.RecipeAddComponent .form-floating > .form-control:not(:placeholder-shown) ~ label {
+
+.RecipeAddComponent .form-floating>.form-control:not(:placeholder-shown)~label {
     color: white;
 }
 
-.RecipeAddComponent .form-floating > :focus ~ label {
+.RecipeAddComponent .form-floating> :focus~label {
     color: white !important;
 }
-.RecipeAddComponent .form-floating > :focus ~ label::after {
-    background-color: transparent !important;
-  }
 
+.RecipeAddComponent .form-floating> :focus~label::after {
+    background-color: transparent !important;
+}
