add MyFeed feature

--- a/Frontend/recipe-book/src/App.css
+++ b/Frontend/recipe-book/src/App.css
@@ -41,3 +41,8 @@
 .RecipeBook {
  background-color:#1e1e1e;
 }
+
+.hover-effect:hover {
+  color: #4e6986; /* Change color on hover */
+  transform: scaleY(1.2); /* Increase size on hover */
+}
